<resources>
    <string name="app_name">BitirmeOdevi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deals">Deals</string>
    <string name="all">All</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="transportations">Transportations</string>
    <string name="where_next">Where Next City?</string>
    <string name="search">Search</string>
    <string name="top_destinations">TOP DESTINATIONS</string>
    <string name="trip_plan">Trip Plan</string>
    <string name="floatactionbutton">floatActionButton</string>
    <string name="fab">fab</string>
    <string name="bookmark">Bookmark</string>
    <string name="hintText">A country, a city, a place... or anything</string>
    <string name="might_need_these">Mıght need these</string>
    <string name="guide">Guide</string>
    <string name="lorrem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="locationbutton">locationButton</string>
    <string name="nearbyattractionimages">nearbyAttractionImages</string>
    <string name="nearby_attractions">Nearby Attractions</string>
    <string name="mightneedrecycler">mightNeedRecycler</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="how_long_day">How long are you going to stay?</string>
    <string name="flight">flight</string>
    <string name="hotels_description">hotels</string>
    <string name="cars">cars</string>
    <string name="taxi">taxi</string>
    <string name="flightsText">Flights</string>
    <string name="hotelsText">Hotels</string>
    <string name="carsText">Cars</string>
    <string name="taxiText">Taxi</string>
    <string name="home_title">Where’s your next destination?</string>
</resources>