<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                android:src="@drawable/home_backgorund"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-95dp"
                tools:layout_editor_absoluteY="0dp">

            </ImageView>

            <TextView
                android:id="@+id/dealsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:text="@string/deals"
                android:textColor="#181A25"
                android:textFontWeight="600"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:targetApi="p" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/home_tab"
                style="@style/TabLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dealsText"
                app:tabContentStart="0dp"
                app:tabIndicatorColor="#FF4760"
                app:tabMaxWidth="180dp"
                app:tabMode="scrollable"
                app:tabPaddingEnd="3dp"
                app:tabPaddingStart="3dp"
                app:tabRippleColor="#FF4760"
                app:tabSelectedTextColor="#FF4760"
                app:tabTextColor="#C2C5D6"
                tools:ignore="MissingConstraints">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/allTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/flightsTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flights" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/hotelsTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotels" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/transportationsTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transportations" />



            </com.google.android.material.tabs.TabLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/allRecycler"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_tab" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="350dp"
                android:layout_height="80dp"
                android:layout_marginBottom="56dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:id="@+id/flightsButton"
                    style="@style/CustomCategoryButtonStyle"
                    android:background="@drawable/category_button_background"
                    app:srcCompat="@drawable/ic_flight"
                    android:contentDescription="@string/flight" />

                <ImageButton
                    android:id="@+id/hotelsButton"
                    style="@style/CustomCategoryButtonStyle"
                    android:background="@drawable/category_button_background"
                    app:srcCompat="@drawable/ic_hotels"
                    android:contentDescription="@string/hotels_description" />

                <ImageButton
                    android:id="@+id/carsButton"
                    style="@style/CustomCategoryButtonStyle"
                    android:background="@drawable/category_button_background"
                    app:srcCompat="@drawable/ic_cars"
                    android:contentDescription="@string/cars" />

                <ImageButton
                    android:id="@+id/taxiButton"
                    style="@style/CustomCategoryButtonStyle"
                    android:background="@drawable/category_button_background"
                    android:layout_marginEnd="0dp"
                    app:srcCompat="@drawable/ic_taxi"
                    android:contentDescription="@string/taxi" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore="MissingConstraints">

                <TextView
                    style="@style/CustomCategoryButtonTextStyle"
                    android:text="@string/flightsText">
                </TextView>

                <TextView
                    style="@style/CustomCategoryButtonTextStyle"
                    android:text="@string/hotelsText">

                </TextView>

                <TextView
                    style="@style/CustomCategoryButtonTextStyle"
                    android:layout_marginStart="25dp"
                    android:text="@string/carsText">
                </TextView>

                <TextView
                    style="@style/CustomCategoryButtonTextStyle"
                    android:layout_marginStart="30dp"
                    android:text="@string/taxiText">
                </TextView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>