<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/city"
            android:background="@drawable/dialog_background"
            android:autofillHints=""
            android:inputType="text">
        </EditText>

        <EditText
            android:id="@+id/editSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/country"
            android:background="@drawable/dialog_background"
            android:autofillHints=""
            android:inputType="text">
        </EditText>

        <EditText
            android:id="@+id/daysText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/how_long_day"
            android:background="@drawable/dialog_background"
            android:autofillHints=""
            android:inputType="number">
        </EditText>

    </LinearLayout>

</LinearLayout>
