<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/guideTextField"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="24dp"
               android:layout_marginEnd="16dp"
               android:hint="@string/hintText"
               app:endIconDrawable="@drawable/ic_search_icon"
               app:endIconMode="custom"
               app:endIconTint="@color/magic_potion"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/mightNeedRecycler"
               tools:ignore="MissingConstraints">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/guideTextInput"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />

           </com.google.android.material.textfield.TextInputLayout>

           <TextView
               android:id="@+id/searchText"
               style="@style/TitleText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="60dp"
               android:layout_marginEnd="325dp"
               android:text="@string/guide"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/topDestinationText"
               style="@style/SubTitleText"
               android:layout_width="wrap_content"
               android:layout_height="25dp"
               android:layout_marginStart="16dp"
               android:layout_marginTop="24dp"
               android:text="@string/might_need_these"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/searchText"
               tools:ignore="MissingConstraints" />

           <com.google.android.material.tabs.TabLayout
               android:layout_width="wrap_content"
               android:layout_height="25dp"
               android:layout_marginStart="300dp"
               android:layout_marginTop="24dp"
               android:layout_marginEnd="16dp"
               android:textAllCaps="false"
               style="@style/SeeAllTab"
               android:paddingBottom="5dp"
               app:tabIndicatorFullWidth="false"
               app:tabIndicatorColor="@color/magic_potion"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/searchText"
               tools:ignore="MissingConstraints">

               <com.google.android.material.tabs.TabItem
                   android:layout_width="40dp"
                   android:layout_height="18dp"
                   android:text="See all"
                   android:textSize="14sp"
                   tools:ignore="MissingConstraints" />


           </com.google.android.material.tabs.TabLayout>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/mightNeedRecycler"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:orientation="horizontal"
               app:layout_constraintTop_toBottomOf="@+id/topDestinationText"
               tools:ignore="MissingConstraints"
               tools:layout_editor_absoluteX="1dp" />


           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/topPickRecycler"
               android:layout_width="match_parent"
               android:layout_height="250dp"
               android:layout_marginTop="16dp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="1.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/topPickTitle"
               tools:ignore="MissingConstraints" />

           <HorizontalScrollView
               android:id="@+id/horizontalScrollView"
               android:layout_width="427dp"
               android:layout_height="37dp"
               android:layout_marginTop="24dp"
               android:orientation="horizontal"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/guideTextField">

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/chipsRecycler"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
               </androidx.recyclerview.widget.RecyclerView>

           </HorizontalScrollView>

           <TextView
               android:id="@+id/topPickTitle"
               style="@style/SubTitleText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="24dp"
               android:text="Top-Pick-Articles"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


       </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>

</layout>





